--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-        <script src="GlobalReplays/resources/js/facepunch.webgame.js"></script>
-        <script src="GlobalReplays/resources/js/sourceutils.js"></script>
-        <script src="GlobalReplays/resources/js/replayviewer.js"></script>
-        <link type="text/css" rel="stylesheet" href="GlobalReplays/resources/styles/mapviewer.css" />
-        <link type="text/css" rel="stylesheet" href="GlobalReplays/resources/styles/replayviewer.css" />
+        <script src="resources/js/facepunch.webgame.js"></script>
+        <script src="resources/js/sourceutils.js"></script>
+        <script src="resources/js/replayviewer.js"></script>
+        <link type="text/css" rel="stylesheet" href="resources/styles/mapviewer.css" />
+        <link type="text/css" rel="stylesheet" href="resources/styles/replayviewer.css" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
