Fix async updating weirdness

--- a/index.html
+++ b/index.html
@@ -77,7 +77,17 @@
             <option value="kz_simple">SimpleKZ</option>
             <option value="kz_vanilla">Vanilla</option>
         </select>
-        
+        <table>
+            <tr>
+                <th>Place</th>
+                <th></th>
+                <th>Name</th>
+                <th>Time</th>
+                <th>Teleports</th>
+                <th>Date</th>
+                <th>Server</th>
+            </tr>
+        </table>
         <table id="replay-list-list">
             
         </table>
