--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/base64-string.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-        <script src="js/facepunch.webgame.js"></script>
-        <script src="js/sourceutils.js"></script>
-        <script src="js/replayviewer.js"></script>
-        <script src="js/main.js"></script>
-        <link type="text/css" rel="stylesheet" href="styles/mapviewer.css" />
-        <link type="text/css" rel="stylesheet" href="styles/replayviewer.css" />
+        <script src="js/facepunch.webgame.js?v=${VERSION}"></script>
+        <script src="js/sourceutils.js?v=${VERSION}"></script>
+        <script src="js/replayviewer.js?v=${VERSION}"></script>
+        <script src="js/main.js?v=${VERSION}"></script>
+        <link type="text/css" rel="stylesheet" href="styles/mapviewer.css?v=${VERSION}" />
+        <link type="text/css" rel="stylesheet" href="styles/replayviewer.css?v=${VERSION}" />
         <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
