Add footer for github link

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                     
                 </tbody>
             </table>
+            <div style="position: fixed; bottom: 16px;">
+                For issues like broken maps, please <a href="https://github.com/GameChaos/GlobalReplays/issues">make an issue on github</a>
+            </div>
         </div>
     </body>
 </html>
