Add a little text about flat textures

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </table>
             </div>
             <div style="position: fixed; bottom: 16px;">
-                For issues like broken maps, please <a href="https://github.com/GameChaos/GlobalReplays/issues">make an issue on github</a>
+                For issues like broken maps, please <a href="https://github.com/GameChaos/GlobalReplays/issues">make an issue on github</a>. All the textures are flat colours to save space, don't report that :).
             </div>
         </div>
     </body>
